--- a/backend/templates/report.html
+++ b/backend/templates/report.html
@@ -8,9 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Monthly Report</title>
 </head>
+<style>
+.table{
+  justify-content: center;
+  margin-top: 20px;
+}
+</style>
 <body>
-    This is the monthly report of {{udata.uname}}
-
+    
+  <h1>This is the monthly report of {{udata.uname}}</h1>
 
 
 
@@ -24,10 +30,7 @@
       </tr>
     </thead>
     <tbody>
-        {% for a in trackerdata %}
-    
-       
-        
+        {% for a in data %}  
       <tr>
         <th scope="row">{{loop.index}}</th>
         <td>{{a.tracker_name}}</td>
